--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "ext-mbstring": "*",
         "inhere/console": "dev-master",
         "inhere/sroute": "dev-master",
-        "cebe/markdown": "^1.2"
+        "cebe/markdown": "^1.2",
+        "php-comp/http-client": "^1.0"
     },
     "autoload": {
         "psr-4": {
