--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -40,4 +40,10 @@ jobs:
         run: php -d phar.readonly=0 bin/kite phar:pack -o kite.phar
 
       - name: Post to github assets
-        run: echo hi
+        run: |
+          curl \
+          -X POST \
+          -H "Accept: application/vnd.github.v3+json" \
+          -T kite.phar
+#          -H "Content-Type: application/gzip" \
+          https://api.github.com/repos/inere/kite/releases/42/assets
