update some for github action

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,4 +38,4 @@ jobs:
       # Docs: https://getcomposer.org/doc/articles/scripts.md
 
       - name: Run test suite
-        run: composer run test
+        run: php bin/kite -V
