--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "cebe/markdown": "^1.2",
         "php-comp/http-client": "dev-master"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~7.5"
+    },
     "autoload": {
         "psr-4": {
             "Inhere\\Kite\\": "app/"
@@ -29,5 +32,8 @@
         "type": "composer",
         "url": "https://mirrors.aliyun.com/composer/"
       }
+    },
+    "scripts": {
+        "test": "php vender/bin/phpunit"
     }
 }
