--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,6 +1,11 @@
 name: Unit-tests
 
-on: [push]
+on:
+  push:
+    paths:
+      - '**.php'
+      - 'composer.json'
+      - '**.yml'
 
 jobs:
   test:
