--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "inhere/console": "dev-master",
         "inhere/sroute": "dev-master",
         "cebe/markdown": "^1.2",
-        "php-comp/http-client": "dev-master"
+        "php-comp/http-client": "dev-master",
+        "php-comp/http-message": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.5"
@@ -25,7 +26,10 @@
     "autoload": {
         "psr-4": {
             "Inhere\\Kite\\": "app/"
-        }
+        },
+        "files": [
+            "app/func.php"
+        ]
     },
     "repositories": {
       "packagist": {
