--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php-comp/http-message": "^1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~7.5"
+        "phpunit/phpunit": "7.5.20"
     },
     "autoload": {
         "psr-4": {
