--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,12 @@ jobs:
 
       - name: Set ENV for github-release
         run: |
-          echo ::set-env name=RELEASE_TAG::$(echo ${GITHUB_REF:10})
-          echo ::set-env name=RELEASE_NAME::"$GITHUB_WORKFLOW"
+#          echo ::set-env name=RELEASE_NAME::"$GITHUB_WORKFLOW"
+#          echo ::set-env name=RELEASE_TAG::$(echo ${GITHUB_REF:10})
+          echo "${GITHUB_REF:10}" >> $RELEASE_TAG
+          echo "$GITHUB_WORKFLOW" >> $RELEASE_NAME
+          echo $RELEASE_TAG
+          echo $RELEASE_NAME
 
       # usage refer https://github.com/shivammathur/setup-php
       - name: Setup PHP
