--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,6 +22,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Set ENV vars
+        # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#setting-an-environment-variable
+        run: |
+          echo "RELEASE_TAG=${GITHUB_REF:10}" >> $GITHUB_ENV
+          echo "RELEASE_NAME=$GITHUB_WORKFLOW" >> $GITHUB_ENV
+
+      - name: Display Env
+        run: env
+
       # usage refer https://github.com/shivammathur/setup-php
       - name: Setup PHP
         timeout-minutes: 5
@@ -32,9 +41,6 @@ jobs:
           extensions: mbstring, dom, fileinfo, mysql, openssl, igbinary, redis # , swoole-4.4.19 #optional, setup extensions
           ini-values: post_max_size=56M, short_open_tag=On #optional, setup php.ini configuration
           coverage: none #optional, setup coverage driver: xdebug, none
-
-      - name: Display Env
-        run: env
 
       - name: Install dependencies
         run: composer install --no-progress --no-suggest
