--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,13 +20,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set ENV for github-release
+        # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions#setting-an-environment-variable
         run: |
-#          echo ::set-env name=RELEASE_NAME::"$GITHUB_WORKFLOW"
-#          echo ::set-env name=RELEASE_TAG::$(echo ${GITHUB_REF:10})
-          echo "${GITHUB_REF:10}" >> $RELEASE_TAG
-          echo "$GITHUB_WORKFLOW" >> $RELEASE_NAME
-          echo $RELEASE_TAG
-          echo $RELEASE_NAME
+          echo "RELEASE_TAG=${GITHUB_REF:10}" >> $GITHUB_ENV
+          echo "RELEASE_NAME=$GITHUB_WORKFLOW" >> $GITHUB_ENV
 
       # usage refer https://github.com/shivammathur/setup-php
       - name: Setup PHP
@@ -50,9 +47,12 @@ jobs:
 
       - name: Build phar and send to github assets
         run: |
-         php -d phar.readonly=0 bin/kite phar:pack -o kite-${RELEASE_TAG}.phar --no-progress
-         php kite-${RELEASE_TAG}.phar -V
+          echo $RELEASE_TAG
+          echo $RELEASE_NAME
+          php -d phar.readonly=0 bin/kite phar:pack -o kite-${RELEASE_TAG}.phar --no-progress
+          php kite-${RELEASE_TAG}.phar -V
 
+      # https://github.com/actions/create-release
       - uses: meeDamian/github-release@2.0
         with:
           gzip: false
