--- a/composer.json
+++ b/composer.json
@@ -1,47 +1,53 @@
 {
-    "name": "inhere/kite",
-    "description": "person tool by php",
-    "type": "project",
-    "license": "MIT",
-    "homepage": "https://github/inhere/kite.git",
-    "authors": [
-        {
-            "name": "inhere",
-            "email": "in.798@qq.com"
-        }
-    ],
-    "require": {
-        "php": ">7.3.0",
-        "ext-json": "*",
-        "ext-mbstring": "*",
-        "inhere/console": "dev-master",
-        "inhere/sroute": "dev-master",
-        "cebe/markdown": "^1.2",
-        "php-comp/http-client": "dev-master",
-        "php-comp/http-message": "^1.4"
-    },
-    "require-dev": {
-        "phpunit/phpunit": ">8.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Inhere\\Kite\\": "app/"
-        },
-        "files": [
-            "app/func.php"
-        ]
-    },
-    "bin": [
-        "bin/kite",
-        "bin/htu"
-    ],
-    "repositories": {
-      "packagist": {
-        "type": "composer",
-        "url": "https://mirrors.aliyun.com/composer/"
-      }
-    },
-    "scripts": {
-        "test": "php vender/bin/phpunit"
+  "name": "inhere/kite",
+  "description": "person tool by php",
+  "type": "project",
+  "license": "MIT",
+  "homepage": "https://github/inhere/kite.git",
+  "authors": [
+    {
+      "name": "inhere",
+      "email": "in.798@qq.com"
     }
+  ],
+  "require": {
+    "php": ">7.2.0",
+    "ext-json": "*",
+    "ext-mbstring": "*",
+    "inhere/console": "dev-master",
+    "inhere/sroute": "dev-master",
+    "cebe/markdown": "^1.2",
+    "psr/log": "^1.1",
+    "php-comp/http-client": "dev-master",
+    "php-comp/http-message": "^1.4",
+    "gitonomy/gitlib": "^1.2",
+    "ulue/phpgit": "dev-master"
+  },
+  "require-dev": {
+  },
+  "autoload": {
+    "psr-4": {
+      "Inhere\\Kite\\": "app/"
+    },
+    "files": [
+      "app/func.php"
+    ]
+  },
+  "bin": [
+    "bin/kite",
+    "bin/htu"
+  ],
+  "repositories": {
+    "packagist": {
+      "type": "composer",
+      "url": "https://mirrors.aliyun.com/composer/"
+    },
+    "phpgit": {
+      "type": "git",
+      "url": "https://github.com/ulue/phpgit.git"
+    }
+  },
+  "scripts": {
+    "test": "php vender/bin/phpunit"
+  }
 }
