--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "php-comp/http-message": "^1.4",
     "gitonomy/gitlib": "^1.2",
     "phpcom-lab/phpgit": "dev-master",
-    "toolkit/fsutil": "^1.0"
+    "toolkit/fsutil": "^1.0",
+    "league/commonmark": "^1.6"
   },
   "autoload": {
     "psr-4": {
