up: rename .kite.inc to .kite.php

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *.patch
 .idea/
 .git/
-runtime/
+tmp/
 vendor/
 *.lock
 *.phar
@@ -16,6 +16,6 @@ vendor/
 .env
 .phpstorm.meta.php
 .DS_Store
-.kite.inc
+.kite.php
 bin/php-cs-fixer
 /plugin/local/
