up: add some static files and update render logic

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     "gitonomy/gitlib": "^1.2",
     "phpcom-lab/phpgit": "dev-master",
     "toolkit/fsutil": "^1.0",
-    "league/commonmark": "^1.6"
+    "league/commonmark": "^1.6",
+    "colinodell/json5": "^2.2",
+    "laktak/hjson": "^2.1"
   },
   "autoload": {
     "psr-4": {
