--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     "toolkit/fsutil": "^1.0",
     "league/commonmark": "^1.6",
     "colinodell/json5": "^2.2",
-    "laktak/hjson": "^2.1"
+    "laktak/hjson": "^2.1",
+    "knplabs/github-api": "^3.0",
+    "guzzlehttp/guzzle": "^7.0.1",
+    "http-interop/http-factory-guzzle": "^1.0"
   },
   "autoload": {
     "psr-4": {
