--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,18 +57,28 @@ jobs:
         id: changelog
         run: |
           php bin/kite gh cl prev $RELEASE_TAG --style gh-release --no-merges --fetch-tags --file tmp/changelog-${RELEASE_TAG}.md
-          changlog=$(cat tmp/changelog-${RELEASE_TAG}.md)
-          echo "::set-output name=CHLOGBODY::$changlog"
 
-      # https://github.com/actions/create-release
       # https://github.com/meeDamian/github-release
+#      - name: Create release and upload assets
+#        uses: meeDamian/github-release@2.0
+#        with:
+#          gzip: false
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          tag: ${{ env.RELEASE_TAG }}
+#          name: ${{ env.RELEASE_TAG }}
+#          body: |
+#              ${{ steps.changelog.outputs.CHLOGBODY }}
+#          files: kite-${{ env.RELEASE_TAG }}.phar
+
       # https://github.com/softprops/action-gh-release
-      - name: Create relase and upload assets
-        uses: meeDamian/github-release@2.0
+      - name: Create release and upload assets
+        uses: softprops/action-gh-release@v1
+#        if: startsWith(github.ref, 'refs/tags/')
         with:
-          gzip: false
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ env.RELEASE_TAG }}
           name: ${{ env.RELEASE_TAG }}
-          body: ${{ steps.changelog.outputs.CHLOGBODY }}
+          tag_name: ${{ env.RELEASE_TAG }}
+          body_path: tmp/changelog-${{ env.RELEASE_TAG }}.md
           files: kite-${{ env.RELEASE_TAG }}.phar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         GITHUB_REPOSITORY: my_gh_org/my_gh_repo
