--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,16 @@
     "php-comp/http-message": "^1.4",
     "gitonomy/gitlib": "^1.2",
     "phpcom-lab/phpgit": "dev-master",
+    "phpcom-lab/hucron": "dev-master",
     "toolkit/fsutil": "^1.0",
     "league/commonmark": "^1.6",
     "colinodell/json5": "^2.2",
     "laktak/hjson": "^2.1",
     "knplabs/github-api": "^3.0",
     "guzzlehttp/guzzle": "^7.0.1",
-    "http-interop/http-factory-guzzle": "^1.0"
+    "http-interop/http-factory-guzzle": "^1.0",
+    "dragonmantank/cron-expression": "^3.1",
+    "symfony/expression-language": "^5.3"
   },
   "autoload": {
     "psr-4": {
@@ -50,6 +53,10 @@
     "phpgit": {
       "type": "git",
       "url": "https://github.com/phpcom-lab/phpgit.git"
+    },
+    "hucron": {
+      "type": "git",
+      "url": "https://github.com/phpcom-lab/hucron.git"
     }
   },
   "scripts": {
