--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Generate changelog file
         id: changelog
         run: |
+          git status
           php bin/kite git info
           php bin/kite gh cl prev $RELEASE_TAG --style gh-release --no-merges --fetch-tags --file tmp/changelog-${RELEASE_TAG}.md
           cat tmp/changelog-${RELEASE_TAG}.md
