--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "inhere/sroute": "dev-master",
     "cebe/markdown": "^1.2",
     "psr/log": "^1.1",
+    "psr/container": "^1.1",
     "php-comp/http-client": "dev-master",
     "php-comp/http-message": "^1.4",
     "gitonomy/gitlib": "^1.2",
