--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -47,7 +47,7 @@ jobs:
           coverage: none #optional, setup coverage driver: xdebug, none
 
       - name: Install dependencies
-        run: composer install --no-progress --no-suggest
+        run: composer update --no-progress
 
       # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
       # Docs: https://getcomposer.org/doc/articles/scripts.md
