--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -61,8 +61,7 @@ jobs:
       - name: Generate changelog
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.php == '7.4' }}
         run: |
-          git status
-          git log -2
-          git pull
+          git status; git log -1; git pull
+          lastTag=$(git describe --abbrev=0 --tags); git log $lastTag...HEAD --pretty=format:"%H | %s" --no-merges --reverse
           php bin/kite git chlog last head --style gh-release --no-merges --fetch-tags --file tmp/changelog.md
           cat tmp/changelog.md
