--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -58,11 +58,14 @@ jobs:
           php bin/kite -h
           php bin/kite git info
 
+      #
       - name: Generate changelog
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.php == '7.4' }}
         run: |
+          echo "test gen chlog"
           echo "::group::changelog list by git"
-          git status && git log -1 && git pull
+          git status && git log -1 && git pull && git fetch --tags --force
+          git describe --abbrev=0 --tags
           lastTag=$(git describe --abbrev=0 --tags) && git log $lastTag...HEAD --pretty=format:"%H | %s" --no-merges --reverse
           echo "::endgroup::"
           echo "::group::changelog list by kite"
