--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -62,12 +62,10 @@ jobs:
       - name: Generate changelog
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.php == '7.4' }}
         run: |
-          echo "test gen chlog"
-          echo "::group::changelog list by git"
-          git status && git log -1 && git pull && git fetch --tags --force
+          echo "changelog list by git"
+          git status && git log -1 && git fetch --force
           git describe --abbrev=0 --tags
           lastTag=$(git describe --abbrev=0 --tags) && git log $lastTag...HEAD --pretty=format:"%H | %s" --no-merges --reverse
-          echo "::endgroup::"
           echo "::group::changelog list by kite"
           php bin/kite git chlog last head --style gh-release --no-merges --fetch-tags --file tmp/changelog.md
           cat tmp/changelog.md
