--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -64,11 +64,6 @@ jobs:
       - name: Generate changelog
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.php == '7.4' }}
         run: |
-          echo "changelog list by git"
-          git status && git log -1 && git fetch --tags --prune --unshallow --force
-          git describe --abbrev=0 --tags
-          lastTag=$(git describe --abbrev=0 --tags) && git log $lastTag...HEAD --pretty=format:"%H | %s" --no-merges --reverse
-          echo "::group::changelog list by kite"
-          php bin/kite git chlog last head --style gh-release --no-merges --fetch-tags --file tmp/changelog.md
+          echo "changelog list by kite"
+          php bin/kite git chlog last head --style gh-release --no-merges --fetch-tags --unshallow --file tmp/changelog.md
           cat tmp/changelog.md
-          echo "::endgroup::"
