--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,6 +2,8 @@ name: Unit-Tests
 
 on:
   push:
+    tags-ignore:
+      - v* # not trigger on tag release
     paths:
       - '**.php'
       - 'composer.json'
