up action tests
Signed-off-by: inhere <in.798@qq.com>

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,8 +7,8 @@ on:
       - '**.php'
       - 'composer.json'
       - '**.yml'
-    tags-ignore:
-      - v* # not trigger on tag release
+    tags:
+      - v0 # not trigger on tag release
 
 jobs:
   test:
