--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -61,9 +61,8 @@ jobs:
       # git status && git log -1 && git fetch --tags --force
       # git status && git log -1 && git fetch --prune --unshallow
       # git status && git log -1 && git fetch --depth=500 --tags --force
-#      - name: Generate changelog
-#        if: ${{ matrix.os == 'ubuntu-latest' && matrix.php == '7.4' }}
-#        run: |
-#          echo "changelog list by kite"
-#          php bin/kite git chlog last head --style gh-release --no-merges --fetch-tags --unshallow --file tmp/changelog.md
-#          cat tmp/changelog.md
+      - name: Test build Phar and run
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.php == '7.4' }}
+        run: |
+          php -d phar.readonly=0 bin/kite phar:pack -o kite-latest.phar --no-progress
+          php kite-latest.phar -V
