update some logic for load config

--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,15 @@
     "psr/container": "^1.1",
     "php-comp/http-client": "dev-master",
     "php-comp/http-message": "^1.4",
-    "gitonomy/gitlib": "^1.2",
-    "phpcom-lab/phpgit": "dev-master",
+    "gitonomy/gitlib": "^1.3",
     "phpcom-lab/hucron": "dev-master",
+    "phppkg/phpgit": "dev-master",
+    "phppkg/cli-markdown": "^1.0",
     "toolkit/fsutil": "^1.0",
     "colinodell/json5": "^2.2",
     "laktak/hjson": "^2.1",
-    "knplabs/github-api": "^3.0",
-    "guzzlehttp/guzzle": "^7.0.1",
+    "knplabs/github-api": "^3.3",
+    "guzzlehttp/guzzle": "^7.3",
     "http-interop/http-factory-guzzle": "^1.0",
     "dragonmantank/cron-expression": "^3.1",
     "symfony/expression-language": "^5.3",
