--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -65,4 +65,6 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.php == '7.4' }}
         run: |
           php -d phar.readonly=0 bin/kite --debug 4 phar:pack -o kite-latest.phar --no-progress
-          php kite-latest.phar -V
+          php kite-latest.phar self info
+          mv kite-latest.phar /tmp/kite-latest.phar
+          cd /tmp && php kite-latest.phar self info
