--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Build phar package
         run: |
           php -d phar.readonly=0 bin/kite phar:pack -o kite.phar --no-progress
-          php kite-${RELEASE_TAG}.phar -V
+          php kite.phar -V
 
       # https://docs.github.com/en/actions/reference/context-and-expression-syntax-for-github-actions#steps-context
       - name: Generate changelog file
@@ -58,18 +58,6 @@ jobs:
         run: |
           php bin/kite gh cl prev $RELEASE_TAG --style gh-release --no-merges --fetch-tags --unshallow --file tmp/changelog-${RELEASE_TAG}.md
           cat tmp/changelog-${RELEASE_TAG}.md
-
-      # https://github.com/meeDamian/github-release
-#      - name: Create release and upload assets
-#        uses: meeDamian/github-release@2.0
-#        with:
-#          gzip: false
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          tag: ${{ env.RELEASE_TAG }}
-#          name: ${{ env.RELEASE_TAG }}
-#          body: |
-#              ${{ steps.changelog.outputs.CHLOGBODY }}
-#          files: kite-${{ env.RELEASE_TAG }}.phar
 
       # https://github.com/softprops/action-gh-release
       - name: Create release and upload assets
