--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "http-interop/http-factory-guzzle": "^1.0",
     "dragonmantank/cron-expression": "^3.1",
     "symfony/expression-language": "^5.3",
+    "symfony/yaml": "^5.3",
     "monolog/monolog": "^2.3"
   },
   "require-dev": {
