--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "dragonmantank/cron-expression": "^3.1",
     "symfony/expression-language": "^5.3",
     "symfony/yaml": "^5.3",
-    "monolog/monolog": "^2.3"
+    "monolog/monolog": "^2.3",
+    "text/template": "^2.7"
   },
   "require-dev": {
     "ext-posix": "*",
