--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "php-comp/http-message": "^1.4",
     "gitonomy/gitlib": "^1.3",
     "phpcom-lab/hucron": "dev-master",
-    "phppkg/phpgit": "dev-master",
+    "phppkg/phpgit": "^1.0",
     "phppkg/cli-markdown": "^1.0",
     "toolkit/fsutil": "^1.0",
     "colinodell/json5": "^2.2",
