--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "php-comp/http-client": "dev-master",
     "php-comp/http-message": "^1.4",
     "gitonomy/gitlib": "^1.3",
-    "phpcom-lab/hucron": "dev-master",
-    "phppkg/phpgit": "^1.0",
+    "phppkg/hucron": "dev-master",
+    "phppkg/phpgit": "dev-master",
     "phppkg/cli-markdown": "^1.0",
     "toolkit/fsutil": "^1.0",
     "colinodell/json5": "^2.2",
@@ -46,7 +46,8 @@
       "Inhere\\Kite\\": "app/"
     },
     "files": [
-      "app/func.php"
+      "app/func.php",
+      "app/boot.php"
     ]
   },
   "bin": [
@@ -58,14 +59,6 @@
       "type": "composer",
       "url": "https://mirrors.aliyun.com/composer/"
     },
-    "phpgit": {
-      "type": "git",
-      "url": "https://github.com/phpcom-lab/phpgit.git"
-    },
-    "hucron": {
-      "type": "git",
-      "url": "https://github.com/phpcom-lab/hucron.git"
-    }
   },
   "scripts": {
     "test": "php vender/bin/phpunit"
