fix: config load file error

--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,7 @@
       "Inhere\\Kite\\": "app/"
     },
     "files": [
-      "app/func.php",
-      "app/boot.php"
+      "app/func.php"
     ]
   },
   "bin": [
