--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     }
   ],
   "require": {
-    "php": ">7.4.0",
+    "php": ">=8.0",
     "ext-json": "*",
     "ext-mbstring": "*",
     "inhere/console": "dev-master",
