--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     "guzzlehttp/guzzle": "^7.3",
     "http-interop/http-factory-guzzle": "^1.0",
     "dragonmantank/cron-expression": "^3.1",
+    "nette/neon": "^3.3",
     "symfony/expression-language": "^5.3",
     "symfony/yaml": "^5.3",
     "monolog/monolog": "^2.3",
