update: update text template logic

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -55,6 +55,7 @@ jobs:
 
       - name: Run test suite
         run: |
+          phpunit --debug
           php bin/kite -V
           php bin/kite -h
 
