--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
     "php-comp/http-client": "dev-master",
     "php-comp/http-message": "^1.4",
     "gitonomy/gitlib": "^1.3",
+    "phppkg/ini": "dev-main",
+    "phppkg/config": "dev-master",
     "phppkg/hucron": "dev-master",
     "phppkg/phpgit": "dev-master",
     "phppkg/cli-markdown": "^1.0",
