--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "php-comp/http-message": "^1.4",
     "gitonomy/gitlib": "^1.3",
     "phppkg/ini": "dev-main",
+    "phppkg/easytpl": "dev-main",
     "phppkg/config": "dev-master",
     "phppkg/hucron": "dev-master",
     "phppkg/phpgit": "dev-master",
@@ -37,8 +38,7 @@
     "nette/neon": "^3.3",
     "symfony/expression-language": "^5.3",
     "symfony/yaml": "^5.3",
-    "monolog/monolog": "^2.3",
-    "text/template": "^2.7"
+    "monolog/monolog": "^2.3"
   },
   "require-dev": {
     "ext-posix": "*",
