--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     "php-comp/http-client": "dev-master",
     "php-comp/http-message": "^1.4",
     "gitonomy/gitlib": "^1.3",
-    "phppkg/ini": "dev-main",
     "phppkg/easytpl": "dev-main",
     "phppkg/config": "dev-master",
+    "phppkg/ini": "~0.1",
     "phppkg/hucron": "dev-master",
     "phppkg/phpgit": "dev-master",
     "phppkg/cli-markdown": "^1.0",
@@ -32,7 +32,7 @@
     "colinodell/json5": "^2.2",
     "laktak/hjson": "^2.1",
     "knplabs/github-api": "^3.3",
-    "guzzlehttp/guzzle": "^7.3",
+    "guzzlehttp/guzzle": "^7.4",
     "http-interop/http-factory-guzzle": "^1.0",
     "dragonmantank/cron-expression": "^3.1",
     "nette/neon": "^3.3",
