--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.0] # 7.2,7.4,
+        php: [8.0, 8.1] # 7.2,7.4,
         os: [ubuntu-latest, macOS-latest] # windows-latest,
 #        include: # will not testing on php 7.2
 #          - os: 'ubuntu-latest'
