--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,19 @@
     "inhere/console": "dev-master",
     "inhere/sroute": "dev-master",
     "cebe/markdown": "^1.2",
+    "colinodell/json5": "^2.2",
+    "gitonomy/gitlib": "^1.3",
     "psr/log": "^3.0",
     "psr/container": "^1.1",
-    "php-comp/http-client": "dev-master",
-    "php-comp/http-message": "^1.4",
-    "gitonomy/gitlib": "^1.3",
+    "phppkg/http-client": "dev-master",
+    "phppkg/http-message": "^2.0",
     "phppkg/easytpl": "dev-main",
     "phppkg/config": "dev-master",
     "phppkg/ini": "~0.1",
     "phppkg/hucron": "dev-master",
     "phppkg/phpgit": "dev-master",
-    "phppkg/cli-markdown": "^1.0",
+    "phppkg/cli-markdown": "^2.0",
     "toolkit/fsutil": "^2.0",
-    "colinodell/json5": "^2.2",
     "laktak/hjson": "^2.1",
     "knplabs/github-api": "^3.3",
     "guzzlehttp/guzzle": "^7.4",
