chore: update some dep version

--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,10 @@
     "phppkg/phpgit": "dev-master",
     "phppkg/cli-markdown": "^2.0",
     "toolkit/fsutil": "^2.0",
-    "laktak/hjson": "^2.1",
-    "knplabs/github-api": "^3.3",
+    "laktak/hjson": "^2.2",
+    "knplabs/github-api": "^3.5",
     "guzzlehttp/guzzle": "^7.4",
+    "guzzlehttp/psr7": "^2.1",
     "http-interop/http-factory-guzzle": "^1.0",
     "dragonmantank/cron-expression": "^3.1",
     "nette/neon": "^3.3",
