ci: add -W option on github action tests

--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Install deps and run
         run: |
-          composer update --no-progress
+          composer update --no-progress -W
           php bin/kite
 
       # Login against a Docker registry except on PR
