--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -48,7 +48,7 @@ jobs:
           coverage: none #optional, setup coverage driver: xdebug, none
 
       - name: Install dependencies
-        run: composer update --no-progress
+        run: composer update --no-progress -W
 
       # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
       # Docs: https://getcomposer.org/doc/articles/scripts.md
