--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Run test suite
         run: |
-          phpunit --debug
+          phpunit
           php bin/kite -V
           php bin/kite -h
 
